# Visual-RAG

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
artifacts_demo/segments/: bunny.jsonl  jellyfish.jsonl  nasa_snowflake.jsonl  sintel.jsonl
artifacts_demo/transcripts/: nasa_snowflake.jsonl
configs/: ablation_siglip.yaml  ablation_vitl.yaml  default.yaml  demo.yaml
docs/: DISSERTATION_OUTLINE.md  EXPERIMENTS.md
docs/chapters/: appendix_b_tables.md  ch1_introduction.md  ch2_related_work.md  ch3_system_design.md  ch4_implementation.md  ch5_evaluation.md  ch6_discussion.md  ch7_conclusion.md  make_appendix_b.py
results/: decompositions_val.json  eval_val_corpus.json  eval_val_corpus_a0.7.json  eval_val_corpus_a0.8.json  eval_val_corpus_a0.9.json  eval_val_corpus_best_tau03.json  eval_val_corpus_decomp.json  eval_val_corpus_decomp_rerank.json  eval_val_corpus_rerank.json  eval_val_corpus_siglip.json  eval_val_corpus_siglip_decomp.json  eval_val_corpus_tau03.json  eval_val_corpus_vitl.json  eval_val_video.json  eval_val_video_best_tau03.json  eval_val_video_decomp.json  eval_val_video_decomp_rerank.json  eval_val_video_rerank.json  eval_val_video_siglip.json  eval_val_video_siglip_decomp.json  eval_val_video_tau03.json  eval_val_video_vitl.json  qa_claude_tn44.json  qa_graph_150.json  qa_simple_150.json
scripts/: answer.py  build_index.py  download_nextqa.py  embed_backbone.py  eval_qa.py  evaluate.py  ingest_dataset.py  ingest_watchdog.ps1  query_index.py
ui/: app.py
visualrag/: __init__.py  schema.py
(+53 files in other folders)
