[project]
name = "visualrag"
version = "0.1.0"
description = "Autonomous Visual Search Agent for Video Retrieval (Visual RAG)"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["visualrag*"]
